Revert "Merge branch 'master' of https://github.com/aannuuj/Tedx"
This reverts commit 64b27977391d67d2fdf0202243dfac69b8015283, reversing
changes made to 37247ce6132a7bf1b40ef6544cd8a6428e0db7d4.

--- a/index.html
+++ b/index.html
@@ -196,19 +196,19 @@
 				<div class="row os">
 						<div class="col-12 col-md-4">
 								<div class="counter">
-									<div class="counter title_decoration" style="font-size: 2.43rem">3500+</div>
+									<div class="counter__date title_decoration">3500&plus;</div>
 									<div class="counter__name">Attendees</div>
 								</div>
 							</div>
 					<div class="col-12 col-md-4">
 						<div class="counter">
-							<div class="counter title_decoration" style="font-size: 2.43rem">130+</div>
+							<div class="counter__date title_decoration">130&plus;</div>
 							<div class="counter__name">Partners</div>
 						</div>
 					</div>
 					<div class="col-12 col-md-4">
 						<div class="counter">
-							<div class="counter title_decoration" style="font-size: 2.43rem">50+</div>
+							<div class="counter__date title_decoration">50&plus;</div>
 							<div class="counter__name">Ideas</div>
 						</div>
 					</div>
