--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 	<!-- /Header -->
 
 	<section id="#">  <!-- Hero -->
-	<header class="hero jarallax" data-video="video/ted1.mp4" >
+	<header class="hero jarallax" data-image="img/landing.jpg" >
 		
 	    <div class="container">
             <div class="hero__caption" data-start="opacity:1; transform[swing]:translateY(0px)" data-500-start="opacity:0; transform[swing]:translateY(-100px)">
 			    <div class="hero__row">
-		            <h6 class="title__h6 title" style="color:#e62b1e">TED<sup>x</sup><span style="color: white">Chennai</span></h6>
+		            
 			        <h2 class="title__h1 hero__title hero__title_line">Ideas Worth Spreading</h2>
 				    <p class="hero__description">
 							Imagine a day filled with brilliant speakers, thought-provoking videos and mind-blowing conversations. The next revolution won't be the one where we bring our guns, it will be the one where we bring our ideas.	</p>
