--- a/about.html
+++ b/about.html
@@ -8,6 +8,9 @@
 		   nav.style.backgroundColor = 'black';
 		   else nav.style.backgroundColor = 'Black';
 		};
+		window.onbeforeunload = function () {
+  window.scrollTo(0, 0);
+}
 		</script>
 <head>
     <meta charset="utf-8" />
@@ -127,7 +130,8 @@
 										<br>
 										<br>
 										<br>
-									<h2 class="title title__h1" style="color:#e62b1e">TED<sup>x</sup><span style="color: white">Chennai</span></h2>
+									<h2 class="title title__h1" style="color:#e62b1e; font-size: 4rem;
+  font-weight: 700;">TED<sup>x</sup><span style="color:white;">Chennai</span></h2>
 								</header>
 								
 								<div class="item-news__paragraph item-news__paragraph_line">
@@ -258,7 +262,7 @@
 					<div class="right">
 						<br>
 						<br>
-						<a href="http://thepopcorn.tech/" target="_blank" rel=”noopener” rel=”noreferrer” class="opacity-100"><img style="height: 68.07px; width: 290px;"src="images/POP.png" alt="Thepopcorn"></a>
+						<a href="http://thepopcorn.tech/" target="_blank" rel=”noopener” rel=”noreferrer” class="opacity-100"><img style="height: 60px; width: 290px;"src="images/POP.png" alt="Thepopcorn"></a>
 			</div>
 				</div>
 			</div>
