--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@ with “What IF”.
 
 		<div class="footer-right">
 
-		
+		<p><span>Leave us a message!</span></p>
 			<form id="contact-form" action="email.php" method="post" target="_blank" data-toggle="validator" style="align-self: right">
 			    <div class="container container_md">
 			        <div class="row">
@@ -774,10 +774,10 @@ with “What IF”.
 		</div>
 
 				<div class="w3-container w3-padding-64 w3-center w3-opacity w3-xxlarge">
-<i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-   <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+<a href="https://www.facebook.com/TEDxChennai/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+ <a href="https://www.instagram.com/tedxchennai/?hl=en"> <i class="fa fa-instagram w3-hover-opacity"></i></a>
+ <a href="">  <i class="fa fa-twitter w3-hover-opacity"></i></a>
+  <a href="https://www.linkedin.com/company/tedxchennai/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
 					
 
 				</div>
