--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@ with “What IF”.
 	</section>
 
 	<!-- Contact -->
-	<section class="section section-contact" id ="contact">
+<!--	<section class="section section-contact" id ="contact">
 	    <div class="container">	
 		    <div class="row">
 
@@ -713,7 +713,7 @@ with “What IF”.
 		
 		</div>
 			</section>
-	
+	-->
 	<!-- /Contact -->
 <hr>
 <footer class="footer-distributed ">
