--- a/index.html
+++ b/index.html
@@ -728,17 +728,17 @@ with “What IF”.
 
 				<div>
 					<i class="fa fa-map-marker"></i>
-					<p><span>1st floor, New No.13, <br>Moores Garden Road, Nungambakkam, <br></span>Chennai-06, Tamil Nadu</p>
+					<p><span>1st floor, New No.13, <br>Moores Garden Road, Nungambakkam, <br>Chennai-06, Tamil Nadu</span></p>
 				</div>
 
 				<div>
 					<i class="fa fa-phone"></i>
-					<p>+91 9711806060</p>
+					<p><span>+91 9711806060</span></p>
 				</div>
 
 				<div>
 					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:maaz.tedxchennai@gmail.com">maaz.tedxchennai@gmail.com</a></p>
+					<p><span><a href="mailto:maaz.tedxchennai@gmail.com">maaz.tedxchennai@gmail.com</a></span></p>
 				</div>
 
 			</div>
