--- a/gallery.html
+++ b/gallery.html
@@ -57,8 +57,8 @@
                 <li class="nav-item"><a href="index.html">Home</a></li>
 				<li class="nav-item"><a href="about.html">About</a></li>
 			<!--	<li class="nav-item"><a href="#speaker">Speakers</a></li> -->
-				<li class="nav-item"><a href="index.html/#tickets">Tickets</a></li>
-				<li class="nav-item"><a href="#contact">Contact</a></li>
+			
+				<li class="nav-item"><a href="#contact">Contact Us</a></li>
 				
             </ul>
 		</div>
@@ -266,7 +266,7 @@
 		</section>
 
 <!-- /Contact -->
-<section class="section section-contact" >
+
 <footer class="footer">
 		<div class="container">
 			<div class="row">
@@ -279,14 +279,18 @@
 				<div class="col-md-6 col-lg-4">
 					<h5 class="title title__h6 text_uppercase">Contact</h5>
 					<ul class="footer__contacts list-unstyled">
-						<li><a href="mailto: maaz.tedxchennai@gmail.com">E. : maaz.tedxchennai@gmail.com</a></li>
-								<li><a href="tel:+91-9711806060">T. : +91-9711806060</a></li>
+						<li><a  style="text-decoration: none;" href="mailto: maaz.tedxchennai@gmail.com">E. : maaz.tedxchennai@gmail.com</a></li>
+								<li><a style="text-decoration: none;" href="tel:+91-9711806060">T. : +91-9711806060</a></li>
 					</ul>
 				</div>
 				<div class="col-md-6 col-lg-4">
 					<h5 class="title title__h6 text_uppercase">Social</h5>
 					<ul class="footer__contacts list-unstyled">
-						<li>Connect us on <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/">facebook</a>,<br/><a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.youtube.com/channel/UCubnIFff5t2ipKcV0gdKR6w">YouTube</a> or <a class="link_decoration" target="blank" rel=”noopener” rel=”noreferrer” href="https://www.instagram.com/tedxchennai/?hl=en">Instagram</a></li>
+						Connect with us on  
+						<li><a  class="fa fa-facebook" style="font-size:36px" style="text-decoration: none;"  target=_blank rel=”noopener”  rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/"></a>  
+							<span style="display:inline-block; width: 10px;"> </span><a class="fa fa-youtube" style="font-size:36px" style="text-decoration: none;" target=_blank rel=”noopener” rel=”noreferrer” href="https://www.youtube.com/channel/UCubnIFff5t2ipKcV0gdKR6w"></a>
+							<span style="display:inline-block; width: 10px;"></span><a  class="fa fa-instagram" style="font-size:36px" style="text-decoration: none;" target=_blank  href="https://www.instagram.com/tedxchennai/?hl=en"></a>
+					
 					</ul>
 				</div>
 			</div>
