--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="about.html">About</a></li>
-				<li class="nav-item"><a href="#pastevents">Past Events</a></li>
+				<li class="nav-item"><a href="past events.html">Past Events</a></li>
 				<!--<li class="nav-item"><a href="#speaker">Speakers</a></li> -->
 				<li class="nav-item"><a href="#tickets">Passes</a></li>
 				<li class="nav-item"><a href="#contact">Contact</a></li>
@@ -110,8 +110,7 @@
 		<div class="hero__social animated slideInUp">
 		
 		    <a  class="fa fa-facebook"  style="font-size:36px" target=_blank rel=”noopener” rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/"></a>
-			<a  class="fa fa-youtube"   style="font-size:36px" target=_blank rel=”noopener” rel=”noreferrer” href="https://www.youtube.com/channel/UCubnIFff5t2ipKcV0gdKR6w"></a>
-			<a  class="fa fa-instagram"  style="font-size:36px"target=_blank  href="https://www.instagram.com/tedxchennai/?hl=en"></a>
+		<a  class="fa fa-instagram"  style="font-size:36px"target=_blank  href="https://www.instagram.com/tedxchennai/?hl=en"></a>
 		</div>
 	
     </header>	
@@ -123,7 +122,7 @@
         <div class="container">
             <div class="box-image">
 			    <div class="reveal">
-				    <img src="img/hello-image3.jpg" alt="theme">
+				    <img src="images/we.png" alt="theme">
 				</div>
 			</div>
 			<div class="row justify-content-center">
@@ -532,94 +531,8 @@
 </section>
 <div class="container" ></div>
 <!-- History -->
-<section class="section section-history section_no-space-bottom section_first"  id="pastevents">
-	<div class="container">
-		<div class="row">
-			<div class="col section__header-wrap">
-				<h2 class="title__section title__h1 title_horizontal-line"><span class="reveal reveal_gray">Past Events</span></h2>
-				<p class="section__subtitle"></p>
-			</div>
-		</div>
-	</div>
 
-	<div class="container">
-		<!-- Item -->
-		<div class="row row-flex os">
-			<div class="col-sm-auto col-lg-5">
-				<div class="block-image">
-					<span class="block-image__number" data-top-bottom="transform:translate3d(0,50px,0)" data-bottom-top="transform:translate3d(0,0px,0)">01.</span>
-					<div class="reveal"><img src="img/2017.jpg" alt="2017 Year"></div>
-				</div>
-			</div>
-			<div class="col-12 col-lg-7">
-				<div class="col-about__describe col-about__describe_right">
-					<h6 class="title__h6 title__overhead">2016 </h6>
-					<h2 class="title title__h2 title__section title_normal">Erasing The Box </h2>
-					<p class="block-description">The goal of TEDxChennai is to promote free thought. Through the ideas that are shared on stage we aim to facilitate a conversation between thinkers, doers and changemakers. The idea is that these very conversations impact new thinking. It isn't about thinking outside the box anymore. It's about erasing that very box and venturing out to explore new thoughts -an excursion for the mind of sorts. It's about shoving that box aside and starting fresh on that slate. Light travels faster than sound. Similarly, ideas travel faster when boundaries are eliminated. No box should be able to limit your ideas. Let your imagination take flight. Erase the box. Embrace the possibilities.</p>
-					<P><a class="btn hero__btn" target= "blank" rel=”noopener” rel=”noreferrer” href="https://www.ted.com/tedx/events/19122">Know more</a></P></div>
-			</div>
-		</div>
-		<!-- /Item -->
-		
-		<!-- Item -->
-		<div class="row row-flex os">
-			<div class="col-12 col-lg-7 order-2 order-lg-1">
-				<div class="col-about__describe col-about__describe_left">
-					<h6 class="title__h6 title__overhead">2018</h6>
-					<h2 class="title title__h2 title__section title_normal">Revolution </h2>
-					<p class="block-description">Most problems today seem scary. It may seem like the world is going to end soon. But actually many of these problems can be easily tackled – solutions for these exist! Its just that they may be unseen, unheard, unscaled or unfunded. Never in history has there been a time when it’s been so easy to find solutions to problems that plague us, its just that we have been blinded temporarily. How the road ahead will turn out depends greatly on the narratives we chose to apply – to understand today’s needs, to imagine tomorrow’s and to walk with a collective and responsible way forward. The next revolution won’t be one where we bring out the guns. The next revolution is one where we bring our ideas. </p>
-				<P><a class="btn hero__btn" target= "blank" rel=”noopener” rel=”noreferrer” href="https://www.ted.com/tedx/events/24741">Know more</a></P></div>
-			</div>
-			<div class="col-sm-auto col-lg-5 order-1 order-lg-2">
-				<div class="block-image _right">
-					<span class="block-image__number" data-top-bottom="transform:translate3d(0,50px,0)" data-bottom-top="transform:translate3d(0,0px,0)">02.</span>
-					<div class="reveal"><img src="img/2018.jpg" alt="2018 Year"></div>
-					</div>
-			</div>
-		</div>
-		<!-- /Item -->
-		
-		<!-- Item -->
-		<div class="row row-flex os">
-			<div class="col-sm-auto col-lg-5">
-				<div class="block-image">
-					<span class="block-image__number" data-top-bottom="transform:translate3d(0,50px,0)" data-bottom-top="transform:translate3d(0,0px,0)">03.</span>
-					<div class="reveal"><img src="img/gallery2.jpg" alt="2019 Year"></div>
-				</div>
-			</div>
-			<div class="col-12 col-lg-7">
-				<div class="col-about__describe col-about__describe_right">
-					<h6 class="title__h6 title__overhead">2019</h6>
-					<h2 class="title title__h2 title__section title_normal">IF</h2>
-					<p class="block-description">
-
-Aren’t most discoveries and inventions made in the past decade, a by-
-product of the questions the inventor asked?
-
-Questions that left them wonderstruck - “Wow, that’s a really
-interesting point!”.
-Questions that piqued their curiosity
-Why did the apple fall on Earth? – Issac Newton
-What if we, as humans, could sustain an ecosystem in another
-planet? – Elon Musk
-What if there was an omni-purpose device to use anytime,
-anywhere, by anyone? – Steve Jobs
-Extending their thoughts and questions, if we are going to solve the
-problems of tomorrow, we need to be asking the right questions and
-challenging accepted notions today. We need to be curious to delve
-deeper into the possibilities and pitfalls of solutions to arrive at that one,
-new idea that could change everything. Our resolve at TEDxChennai is
-to question the status quo and leave no stone unturned in exploring the
-endless possibilities of life. We believe that the next big change will start
-with “What IF”.
-</p>
-					<P><a class="btn hero__btn" target= "blank" rel=”noopener” rel=”noreferrer” href="https://www.ted.com/tedx/events/31903">Know more</a></P></div>
-			</div>
-		</div>
-		<!-- /Item -->
-	</div>
-</section>
-<!-<section class="section section-works">
+<section class="section section-works">
     	<div class="container">
             <div class="row">
 			    <div class="col section__header-wrap">
@@ -767,31 +680,30 @@ with “What IF”.
 	<!-- /Contact -->
 	
 	<footer class="footer">
-			<div class="container  col-lg-7.5">
+			
 				<div class="row">
-					<div class="col-md-6 col-lg-4">
+					<div class="col-md-6 col-lg-3">
 						<h5 class="title title__h6 text_uppercase">Office</h5>
 						<ul class="footer__contacts list-unstyled">
 							<li>1st floor, New No.13, <br>Moores Garden Road, Nungambakkam, <br>Chennai, Tamil Nadu 600006</li>
 						</ul>
 					</div>
-					<div class="col-md-6 col-lg-4">
+					<div class="col-md-6 col-lg-3">
 						<h5 class="title title__h6 text_uppercase">Contact</h5>
 						<ul class="footer__contacts list-unstyled">
-							<li><a style="text-decoration: none;" href="mailto: maaz.tedxchennai@gmail.com">E. : maaz.tedxchennai@gmail.com</a></li>
-							<li><a style="text-decoration: none;" href="tel:+91-9711806060">T. : +91-9711806060</a></li>
+							<li><a style="text-decoration: none;" style="font-size:36px"h class= "fa fa-mail" href="mailto: maaz.tedxchennai@gmail.com"> maaz.tedxchennai@gmail.com</a></li>
+							<li><a style="text-decoration: none;" class= "fa fa-phone" href="tel:+91-9711806060"> +91-9711806060</a></li>
 						</ul>
 					</div>
-					<div class="col-md-6 col-lg-4">
+					<div class="col-md-6 col-lg-3">
 						<h5 class="title title__h6 text_uppercase">Social</h5>
 						<ul class="footer__contacts list-unstyled">
 							Connect with us on  
 							<li><a  class="fa fa-facebook" style="font-size:36px" style="text-decoration: none;"  target=_blank rel=”noopener”  rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/"></a>  
-								<span style="display:inline-block; width: 10px;"> </span><a class="fa fa-youtube" style="font-size:36px" style="text-decoration: none;" target=_blank rel=”noopener” rel=”noreferrer” href="https://www.youtube.com/channel/UCubnIFff5t2ipKcV0gdKR6w"></a>
 								<span style="display:inline-block; width: 10px;"></span><a  class="fa fa-instagram" style="font-size:36px" style="text-decoration: none;" target=_blank  href="https://www.instagram.com/tedxchennai/?hl=en"></a>
 						
 						</ul>
-					</div>
+					
 				</div>
 			</div>
 		</footer>
