--- a/gallery.html
+++ b/gallery.html
@@ -255,8 +255,7 @@
 			<span style="display:inline-block; width: 350px;"></span>
 		
 			<div class="right">
-				<br>
-				<br>
+				
 				<a href="https://thepopcorn.tech/" target="_blank" rel=”noopener” rel=”noreferrer” class="opacity-100"><img style="height: 60px; width: 290px;"src="images/POP.png" alt="Thepopcorn"></a>
 	</div>
 		</div>
@@ -267,34 +266,35 @@
 
 <!-- /Contact -->
 
+
 <footer class="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6 col-lg-4">
-					<h5 class="title title__h6 text_uppercase">Office</h5>
-					<ul class="footer__contacts list-unstyled">
-						<li>1st floor, New No.13, <br>Moores Garden Road, Nungambakkam, <br>Chennai, Tamil Nadu 600006</li>
-					</ul>
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<h5 class="title title__h6 text_uppercase">Contact</h5>
-					<ul class="footer__contacts list-unstyled">
-						<li><a  style="text-decoration: none;" href="mailto: maaz.tedxchennai@gmail.com">E. : maaz.tedxchennai@gmail.com</a></li>
-								<li><a style="text-decoration: none;" href="tel:+91-9711806060">T. : +91-9711806060</a></li>
-					</ul>
-				</div>
-				<div class="col-md-6 col-lg-4">
-					<h5 class="title title__h6 text_uppercase">Social</h5>
-					<ul class="footer__contacts list-unstyled">
-						Connect with us on  
-						<li><a  class="fa fa-facebook" style="font-size:36px" style="text-decoration: none;"  target=_blank rel=”noopener”  rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/"></a>  
-						<span style="display:inline-block; width: 10px;"></span><a  class="fa fa-instagram" style="font-size:36px" style="text-decoration: none;" target=_blank  href="https://www.instagram.com/tedxchennai/?hl=en"></a>
-					
-					</ul>
-				</div>
+			
+		<div class="row">
+			<div class="col-md-6 col-lg-4">
+				<h5 class="title title__h6 text_uppercase">Office</h5>
+				<ul class="footer__contacts list-unstyled">
+					<li> <a class= "fa fa-marker"></a> 1st floor, New No.13, <br>Moores Garden Road, Nungambakkam, <br>Chennai, Tamil Nadu 600006</a> </li>
+				</ul>
 			</div>
+			<div class="col-md-6 col-lg-4">
+				<h5 class="title title__h6 text_uppercase">Contact</h5>
+				<ul class="footer__contacts list-unstyled">
+					<li><a style="text-decoration: none;"  class= "fa fa-envelope" href="mailto: maaz.tedxchennai@gmail.com">  maaz.tedxchennai@gmail.com</a></li>
+					<li><a style="text-decoration: none;" class= "fa fa-phone" href="tel:+91-9711806060"> +91-9711806060</a></li>
+				</ul>
+			</div>
+			<div class="col-md-6 col-lg-4">
+				<h5 class="title title__h6 text_uppercase">Social</h5>
+				<ul class="footer__contacts list-unstyled">
+					Connect with us on  
+					<li><a  class="fa fa-facebook" style="font-size:36px" style="text-decoration: none;"  target=_blank rel=”noopener”  rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/"></a>  
+						<span style="display:inline-block; width: 10px;"></span><a  class="fa fa-instagram" style="font-size:36px" style="text-decoration: none;" target=_blank  href="https://www.instagram.com/tedxchennai/?hl=en"></a>
+						<span style="display:inline-block; width: 10px;"></span><a  class="fa fa-twitter" style="font-size:36px" style="text-decoration: none;" target=_blank  href="https://www.instagram.com/tedxchennai/?hl=en"></a>
+						<span style="display:inline-block; width: 10px;"></span><a  class="fa fa-whatsapp" style="font-size:36px" style="text-decoration: none;" target=_blank  href="https://www.instagram.com/tedxchennai/?hl=en"></a>	</ul>
+			
 		</div>
-	</footer>
+	</div>
+</footer>
 
 </section>
 <!-- PhotoSwipe -->
