--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	window.onscroll=()=>{
   const nav = document.querySelector('#navmenu');
   if(this.scrollY <= 500)
-   nav.style.backgroundColor = 'black';
+   nav.style.backgroundColor = 'tranparent';
    else nav.style.backgroundColor = 'Black';
 };
 </script>
@@ -28,7 +28,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-	<link rel="shortcut icon" href="images/popx.png" type="image/png">
+		<link rel="shortcut icon" href="img/tabicon.png" type="image/png">
 
     <!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="style/style.css"/>
