--- a/past events.html
+++ b/past events.html
@@ -21,7 +21,7 @@
     <meta name="description" content="" />
 
 	
-	<link rel="shortcut icon" href="images/popx.png" type="image/png">
+		<link rel="shortcut icon" href="img/tabicon.png" type="image/png">
 
     <!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="style/style.css"/>
