partners and gallery

--- a/past events.html
+++ b/past events.html
@@ -166,7 +166,53 @@ with “What IF”.
 	</div>
 </section>
 
+<!--partners-->
 
+		<section class="section">
+	    <div class="container">
+		    <div class="row os">
+			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+				    <img class="brand-col__logo" src="img/prevpartners/aura.png" alt="Aura">
+				</div>
+			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+				    <img class="brand-col__logo" src="img/prevpartners/BNP.png" alt="BNP Paribas">
+				</div>
+			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+				    <img class="brand-col__logo" src="img/prevpartners/godaddy.png" alt="godaddy">
+				</div>
+			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+				    <img class="brand-col__logo" src="img/prevpartners/hyatt.png" alt="Park Hyatt">
+				</div>
+			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+				    <img class="brand-col__logo" src="img/prevpartners/infosys.png" alt="Infosys">
+				</div>
+			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+				    <img class="brand-col__logo" src="img/prevpartners/mailchimp.png" alt="Mail Chimp">
+				</div>
+			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+				    <img class="brand-col__logo" src="img/prevpartners/ola.png" alt="Ola">
+				</div>
+			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+				    <img class="brand-col__logo" src="img/prevpartners/parvathy.png" alt="Parvathy Hospital">
+				</div>
+				<div class="col-4 col-md-4 col-lg-3 brand-col">
+				    <img class="brand-col__logo" src="img/prevpartners/radio.png" alt="94.3 Radio">
+				</div>
+			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+				    <img class="brand-col__logo" src="img/prevpartners/rajalakshmi.png" alt="Rajalakshmi Institutions">
+				</div>
+			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+				    <img class="brand-col__logo" src="img/prevpartners/spi.png" alt="SPI Cinemas">
+				</div>
+			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+				    <img class="brand-col__logo" src="img/prevpartners/zoho.png" alt="ZOHO">
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+<!--/partners-->
 <!-- /past evnets -->
 	<!-- Contact -->
     <section class="section section-contact" id ="contact">
@@ -274,6 +320,7 @@ with “What IF”.
         </div>
     </div>	
 	<!-- /PhotoSwipe -->
+
 	
 	<!-- Contact Form -->
 	<div class="popup popup-overlay">
