--- a/past events.html
+++ b/past events.html
@@ -172,40 +172,89 @@ with “What IF”.
 	    <div class="container">
 		    <div class="row os">
 			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+			    	<figure>
 				    <img class="brand-col__logo" src="img/prevpartners/aura.png" alt="Aura">
+					<figcaption><b>Aura</b></figcaption>
+					<figcaption>Aura has been catering to renowned global companies offering turnkey solutions.</figcaption>
+				</figure>
+
 				</div>
 			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+			    	<figure>
 				    <img class="brand-col__logo" src="img/prevpartners/BNP.png" alt="BNP Paribas">
+				    <figcaption><b>BNP Paribas</b></figcaption>
+					<figcaption>It is the world's 8th largest bank by total assets, and currently operates with a presence in 77 countries</figcaption>
+				</figure>
 				</div>
 			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+			    	<figure>
 				    <img class="brand-col__logo" src="img/prevpartners/godaddy.png" alt="godaddy">
+				    <figcaption><b>Godaddy</b></figcaption>
+					<figcaption>Aura has been catering to renowned global companies offering turnkey solutions.</figcaption>
+				</figure>
 				</div>
 			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+			    	<figure>
 				    <img class="brand-col__logo" src="img/prevpartners/hyatt.png" alt="Park Hyatt">
+				    <figcaption><b>Aura</b></figcaption>
+					<figcaption>Aura has been catering to renowned global companies offering turnkey solutions.</figcaption>
+				</figure>
 				</div>
 			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+			    	<figure>
 				    <img class="brand-col__logo" src="img/prevpartners/infosys.png" alt="Infosys">
+				    <figcaption><b>Infosys</b></figcaption>
+					<figcaption>Infosys Limited is an Indian multinational corporation that provides business consulting, information technology and outsourcing services.</figcaption>
+				</figure>
 				</div>
 			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+			    	<figure>
 				    <img class="brand-col__logo" src="img/prevpartners/mailchimp.png" alt="Mail Chimp">
+				    <figcaption><b>Mail Chimp</b></figcaption>
+					<figcaption>Mailchimp is an American marketing automation platform and an email marketing service. </figcaption>
+				</figure>
 				</div>
 			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+			    	<figure>
 				    <img class="brand-col__logo" src="img/prevpartners/ola.png" alt="Ola">
+				    <figcaption><b>Ola</b></figcaption>
+					<figcaption>Ola Cabs, is an Indian ridesharing company offering services that include peer-to-peer ridesharing, ride service hailing, taxi and food delivery..</figcaption>
+				</figure>
 				</div>
 			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+			    	<figure>
 				    <img class="brand-col__logo" src="img/prevpartners/parvathy.png" alt="Parvathy Hospital">
+				    <figcaption><b>Parvathy Hospital</b></figcaption>
+					<figcaption>Parvathy hospital is one of the best multi-speciality hospitals in Chennai offering a complete solution for your overall health.</figcaption>
+				</figure>
 				</div>
 				<div class="col-4 col-md-4 col-lg-3 brand-col">
+					<figure>
 				    <img class="brand-col__logo" src="img/prevpartners/radio.png" alt="94.3 Radio">
+				    <figcaption><b>94.3 Radio</b></figcaption>
+					<figcaption>MY FM is the largest radio station network of the growing India.</figcaption>
+				</figure>
 				</div>
 			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+			    	<figure>
 				    <img class="brand-col__logo" src="img/prevpartners/rajalakshmi.png" alt="Rajalakshmi Institutions">
+				    <figcaption><b>Rajalakshmi Institutions</b></figcaption>
+					<figcaption>Rajalakshmi institutions encompasses more than a half dozen institutions including School, Teacher Training, Nursing, and Engineering colleges. </figcaption>
+				</figure>
 				</div>
 			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+			    	<figure>
 				    <img class="brand-col__logo" src="img/prevpartners/spi.png" alt="SPI Cinemas">
+				    <figcaption><b>SPI Cinemas</b></figcaption>
+					<figcaption>SPI Cinemas is an Indian multiplex chain and film production company.</figcaption>
+				</figure>
 				</div>
 			    <div class="col-4 col-md-4 col-lg-3 brand-col">
+			    	<figure>
 				    <img class="brand-col__logo" src="img/prevpartners/zoho.png" alt="ZOHO">
+				    <figcaption><b>ZOHO</b></figcaption>
+					<figcaption>Zoho Corporation is an Indian software development company. The organization focuses at web-based business tools and information technology.</figcaption>
+				</figure>
 				</div>
 			</div>
 		</div>
