Done from my side

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 						<li class="nav-item"><a href="#">Campus Ambassador</a></li>
 						<li class="nav-item"><a href="past events.html">Past Events</a></li>
 						<li class="nav-item"><a href="#">Blog</a></li>
-						<li class="nav-item"><a href="#">Latter to the audience</a></li>
+						<li class="nav-item"><a href="#">Letter to the Audience</a></li>
 						<li class="nav-item"><a href="#">YouTube TEDx</a></li>
-						
+						<li class="nav-item"><a href="gallery.html">Gallery</a></li>
 					</ul>
 				</li>
             </ul>
@@ -89,12 +89,12 @@
 
 	<section id="home">  <!-- Hero -->
 
-	<header class="hero jarallax" data-video="images/TEDx.gif" >
+	<header class="hero jarallax" " >
 		<div  style=" height: 100%;
 
 		background-position: center;
 	
-		background-size: cover; background-image: url('images/TEDx.gif');">
+		background-size: cover; background-image: url('images/TEDx_bkg.png');">
 	    <div class="container">
             <div class="hero__caption" data-start="opacity:1; transform[swing]:translateY(0px)" data-500-start="opacity:0; transform[swing]:translateY(-100px)">
 			    <div class="hero__row">
@@ -190,6 +190,30 @@
 	<section class="section section-counters text-center" id ="Statistics" >
 			<div class="container">
 				<div class="row os">
+						<div class="col-12 col-md-4">
+								<div class="counter">
+									<div class="counter title_decoration">3500&plus;</div>
+									<div class="counter__name">Attendees</div>
+								</div>
+							</div>
+					<div class="col-12 col-md-4">
+						<div class="counter">
+							<div class="counter title_decoration">130&plus;</div>
+							<div class="counter__name">Partners</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4">
+						<div class="counter">
+							<div class="counter title_decoration">50&plus;</div>
+							<div class="counter__name">Ideas</div>
+						</div>
+					</div>
+					
+				</div>
+				<br>
+				<br>
+				<br>
+					<div class="row os">
 						<div class="col-12 col-md-4">
 								<div class="counter">
 									<div class="counter title_decoration">3500&plus;</div>
