--- a/about.html
+++ b/about.html
@@ -57,15 +57,21 @@
 				<ul class="navbar-nav">
 					<li class="nav-item"><a href="index.html">Home</a></li>
 					<li class="nav-item"><a href="gallery.html">Gallery</a></li>
+					<li class="nav-item"><a href="past events.html">Past Events</a></li>
 					<!--<li class="nav-item"><a href="#speaker">Speakers</a></li> -->
 					<li class="nav-item"><a href="#team">Team</a></li>
 					<li class="nav-item"><a href="#contact">Contact</a></li>
-					<!--<li class="nav-item dropdown">
+					<li class="nav-item dropdown">
 						<a class="dropdown-toggle link__last" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More <i class="fa fa-angle-down" aria-hidden="true"></i></a>
 						<ul class="dropdown-menu dropdown-menu--right" aria-labelledby="navbarDropdownMenuLink">
+							<li class="nav-item"><a href="#">Campus Ambassador</a></li>
+							
+							<li class="nav-item"><a href="#">Blog</a></li>
+							<li class="nav-item"><a href="#">Letter to the Audience</a></li>
+							<li class="nav-item"><a href="#">YouTube TEDx</a></li>
 							
 						</ul>
-					</li>-->
+					</li>
 				</ul>
 			</div>
 		</nav>
