--- a/index.html
+++ b/index.html
@@ -198,14 +198,14 @@
 							</div>
 					<div class="col-12 col-md-4">
 						<div class="counter">
-							<div class="counter title_decoration">130&plus;</div>
-							<div class="counter__name">Partners</div>
+							<div class="counter title_decoration">50&plus;</div>
+							<div class="counter__name">Ideas</div>
 						</div>
 					</div>
 					<div class="col-12 col-md-4">
 						<div class="counter">
-							<div class="counter title_decoration">50&plus;</div>
-							<div class="counter__name">Ideas</div>
+							<div class="counter title_decoration">200k&plus;</div>
+							<div class="counter__name">Lives Impacted</div>
 						</div>
 					</div>
 					
@@ -216,20 +216,20 @@
 					<div class="row os">
 						<div class="col-12 col-md-4">
 								<div class="counter">
-									<div class="counter title_decoration">3500&plus;</div>
-									<div class="counter__name">Attendees</div>
+									<div class="counter title_decoration">130&plus;</div>
+									<div class="counter__name">Partners</div>
 								</div>
 							</div>
 					<div class="col-12 col-md-4">
 						<div class="counter">
-							<div class="counter title_decoration">130&plus;</div>
-							<div class="counter__name">Partners</div>
+							<div class="counter title_decoration">12&plus;</div>
+							<div class="counter__name">Associsted Events</div>
 						</div>
 					</div>
 					<div class="col-12 col-md-4">
 						<div class="counter">
-							<div class="counter title_decoration">50&plus;</div>
-							<div class="counter__name">Ideas</div>
+							<div class="counter title_decoration">50k&plus;</div>
+							<div class="counter__name">Social Media Reach</div>
 						</div>
 					</div>
 					
