--- a/index.html
+++ b/index.html
@@ -38,34 +38,32 @@
 	
 </head>
 <body>
-	
-	  <!-- Load Facebook SDK for JavaScript -->
-	  <div id="fb-root"></div>
-	  <script>
-		window.fbAsyncInit = function() {
-		  FB.init({
-			xfbml            : true,
-			version          : 'v6.0'
-		  });
-		};
-  
-		(function(d, s, id) {
-		var js, fjs = d.getElementsByTagName(s)[0];
-		if (d.getElementById(id)) return;
-		js = d.createElement(s); js.id = id;
-		js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-		fjs.parentNode.insertBefore(js, fjs);
-	  }(document, 'script', 'facebook-jssdk'));</script>
-  
-	  <!-- Your customer chat code -->
-	  <div class="fb-customerchat"
-		attribution=setup_tool
-		page_id="100785174789083"
-  theme_color="#ff7e29"
-  logged_in_greeting="Hi there! How can we help you?"
-  logged_out_greeting="Thank You, We will get back to you soon.">
-	  </div>
-	  
+	<!-- Load Facebook SDK for JavaScript -->
+	<div id="fb-root"></div>
+	<script>
+	  window.fbAsyncInit = function() {
+		FB.init({
+		  xfbml            : true,
+		  version          : 'v6.0'
+		});
+	  };
+
+	  (function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
+
+	<!-- Your customer chat code -->
+	<div class="fb-customerchat"
+	  attribution=setup_tool
+	  page_id="100785174789083"
+theme_color="#0084ff"
+logged_in_greeting="Hi there! How can we help you?"
+logged_out_greeting="Hi there! How can we help you?">
+	</div>
 	
     <div class="loading animated">
 	    <div class="loading-wrap animated bounceInLeft">
