--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 <body>
 		<div class="loading animated">
 				<div class="loading-wrap animated bounceInLeft">
-					<img class="logotype animated infinite bounceIn" src="images/tedx-logo.png" alt="TEDxChennai loding animation">
+					<img style="height: 400.0px; width: 700px" class="logotype animated infinite bounceIn" src="img/Untitled_Artwork.gif" alt="TEDxChennai loding animation">
 				</div>
 			</div>
 			
@@ -64,7 +64,7 @@
 					<li class="nav-item dropdown">
 						<a class="dropdown-toggle link__last" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More <i class="fa fa-angle-down" aria-hidden="true"></i></a>
 						<ul class="dropdown-menu dropdown-menu--right" aria-labelledby="navbarDropdownMenuLink">
-							<li class="nav-item"><a href="#">Campus Ambassador</a></li>
+							<li class="nav-item"><a href="#">Ambassador Program</a></li>
 							
 								<!--<li class="nav-item"><a href="#">Blog</a></li>
 							<li class="nav-item"><a href="#">Letter to the Audience</a></li>
