--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ logged_out_greeting="Thank You for contacting TEDxChennai, we will get back to y
 			<li class="nav-item dropdown">
 					<a class="dropdown-toggle link__last" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More <i class="fa fa-angle-down" aria-hidden="true"></i></a>
 					<ul class="dropdown-menu dropdown-menu--right" aria-labelledby="navbarDropdownMenuLink">
-						<li class="nav-item"><a href="#">Campus Ambassador</a></li>
+						<li class="nav-item"><a href="#">Ambassador Program</a></li>
 						<li class="nav-item"><a href="past events.html">Past Events</a></li>
 						<!--<li class="nav-item"><a href="#">Blog</a></li>
 							<li class="nav-item"><a href="#">Letter to the Audience</a></li>
