--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 	  page_id="100785174789083"
 theme_color="#0084ff"
 logged_in_greeting="Hi there! How can we help you?"
-logged_out_greeting="Thank You for contacting TEDxChennai, we will get back to you soon.">
+logged_out_greeting="Hi there! How can we help you?">
 	</div>
 	
     <div class="loading animated">
 	    <div class="loading-wrap animated bounceInLeft">
-		    <img style="height: 400.0px; width: 700px" class="logotype animated infinite bounceIn" src="img/Untitled_Artwork.gif" alt="TEDxChennai loding animation">
+		    <img style="height: 380.0px; width: 700px" class="logotype animated infinite bounceIn" src="img/Untitled_Artwork.gif" alt="TEDxChennai loding animation">
 	    </div>
 	</div>
 	
@@ -175,7 +175,7 @@ logged_out_greeting="Thank You for contacting TEDxChennai, we will get back to y
 						
 						 <div class="reveal">
 					
-				    <img class="center" style="height: 150.0px; width: 280px;" src="images/we.png" alt="theme">
+				    <img class="center" style="height: 130.0px; width: 280px;" src="images/we.png" alt="theme">
 				</div><br>
 						<br>
 					<blockquote class="block-quote block-quote__about">
@@ -714,7 +714,7 @@ logged_out_greeting="Thank You for contacting TEDxChennai, we will get back to y
 					<div class="col-md-6 col-lg-4">
 						<h5 class="title title__h6 text_uppercase">Contact</h5>
 						<ul class="footer__contacts list-unstyled">
-							<li><a style="text-decoration: none;"  class= "fa fa-envelope" href="mailto: maaz.tedxchennai@gmail.com"></a>maaz.tedxchennai@gmail.com</li>
+							<li><a style="text-decoration: none;"  class= "fa fa-envelope" href="mailto:care@tedxchennai.com"></a> care@tedxchennai.in</li>
 							<li><a style="text-decoration: none;" class= "fa fa-phone" href="tel:+91-9711806060"></a> +91-9711806060</li>
 						</ul>
 					</div>
