--- a/gallery.html
+++ b/gallery.html
@@ -1214,7 +1214,7 @@
 	</div>
 </div>
 <!-- /Contact Form -->
-
+<span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=GGUH1vGBSkN0k8rmtZ9XieylcXkOwOeQgBRwi8UoEBMlJf2VMl0hOKs6SFkH"></script></span>
 <!-- JavaScripts -->
 <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
 <script src="js/plugins.js" type="text/javascript"></script>
