--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@ logged_out_greeting="Hi there! How can we help you?">
     </div>	
 	<!-- /PhotoSwipe -->
 	
-	
+	<span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=GGUH1vGBSkN0k8rmtZ9XieylcXkOwOeQgBRwi8UoEBMlJf2VMl0hOKs6SFkH"></script></span>
 
 	<!-- JavaScripts -->
 	<script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
