--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
 <body>
     <div class="loading animated">
 	    <div class="loading-wrap animated bounceInLeft">
-		    <img class="logotype animated infinite bounceIn" src="images/tedx-logo.png" alt="Thepopcorn">
+		    <img style="height: 140.0px; width: 300px" class="logotype animated infinite bounceIn" src="images/tedd.gif" alt="TEDxChennai loding animation">
 	    </div>
 	</div>
 	
@@ -1098,8 +1098,8 @@
 		<div class="col-md-6 col-lg-4">
 			<h5 class="title title__h6 text_uppercase">Contact</h5>
 			<ul class="footer__contacts list-unstyled">
-				<li><a style="text-decoration: none;"  class= "fa fa-envelope" href="mailto: maaz.tedxchennai@gmail.com"></a>maaz.tedxchennai@gmail.com</li>
-				<li><a style="text-decoration: none;" class= "fa fa-phone" href="tel:+91-9711806060"></a> +91-9711806060</li>
+				<li><a style="text-decoration: none;"  class= "fa fa-envelope" href="mailto:care@tedxchennai.com"></a> care@tedxchennai.in</li>
+				<li><a style="text-decoration: none;" class= "fa fa-phone" href="tel:+91-9711806060"></a> +91-8527703044</li>
 			</ul>
 		</div>
 		<div class="col-md-6 col-lg-4">
@@ -1113,7 +1113,20 @@
 		
 	</div>
 </div>
+
+
+
+
 </footer>
+<div class="row">
+<div class="col-md-12 text-center">
+
+  <p>
+
+Copyright &copy; <script>document.write(new Date().getFullYear());</script> | All rights reserved </p> <p>Poped <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by The Popcorn <a href="https://thepopcorn.tech" target="_blank"></a>
+  </p>
+</div>
+</div>
 
 
 </section>
