--- a/past events.html
+++ b/past events.html
@@ -31,12 +31,11 @@
 	
 </head>
 <body>
-		<div class="loading animated">
-				<div class="loading-wrap animated bounceInLeft">
-					<img style="height: 400.0px; width: 700px" class="logotype animated infinite bounceIn" src="img/Untitled_Artwork.gif" alt="TEDxChennai loding animation">
-				</div>
-			</div>
-			
+	<div class="loading animated">
+	    <div class="loading-wrap animated bounceInLeft">
+		    <img style="height: 140.0px; width: 300px" class="logotype animated infinite bounceIn" src="images/tedd.gif" alt="TEDxChennai loding animation">
+	    </div>
+	</div>
 			<!-- Header -->
 		
     <!-- Header -->
@@ -170,8 +169,8 @@ with “What IF”.
 		
 	</div>
 </section>
+<!--
 
-<!--partners-->
 <section class="section section-history section_no-space-bottom section_first"  id="previous_sponsors">
 	<div class="container">
 		<div class="row">
@@ -183,7 +182,7 @@ with “What IF”.
 	</div>
 
 	<div class="container">
-        <!-- Item -->
+       
 	
 		    <div class="row os">
 			    <div class="col-4 col-md-4 col-lg-3 brand-col">
@@ -263,7 +262,7 @@ with “What IF”.
 			</div>
 		</div>
 	</section>
-
+-->
 
 <!--/partners-->
 <!-- /past evnets -->
@@ -317,22 +316,36 @@ with “What IF”.
 			<div class="col-md-6 col-lg-4">
 				<h5 class="title title__h6 text_uppercase">Contact</h5>
 				<ul class="footer__contacts list-unstyled">
-					<li><a style="text-decoration: none;"  class= "fa fa-envelope" href="mailto: maaz.tedxchennai@gmail.com"></a>maaz.tedxchennai@gmail.com</li>
-					<li><a style="text-decoration: none;" class= "fa fa-phone" href="tel:+91-9711806060"></a> +91-9711806060</li>
+					<li><a style="text-decoration: none;"  class= "fa fa-envelope" href="mailto:care@tedxchennai.com"></a> care@tedxchennai.in</li>
+					<li><a style="text-decoration: none;" class= "fa fa-phone" href="tel:+91-9711806060"></a> +91-8527703044</li>
 				</ul>
 			</div>
 			<div class="col-md-6 col-lg-4">
 				<h5 class="title title__h6 text_uppercase">Social</h5>
 				<ul class="footer__contacts list-unstyled">
 					Connect with us on  
-							<li><a  class="fa fa-facebook" style="font-size:36px" style="text-decoration: none;"  target=_blank rel=”noopener”  rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/"></a>  
-								<span style="display:inline-block; width: 10px;"></span><a  class="fa fa-instagram" style="font-size:36px" style="text-decoration: none;" target=_blank  href="https://www.instagram.com/tedxchennai/?hl=en"></a>
-								<span style="display:inline-block; width: 10px;"></span><a  class="fa fa-twitter" style="font-size:36px" style="text-decoration: none;" target=_blank  href="https://twitter.com/TEDxChennai"></a>
-								<span style="display:inline-block; width: 10px;"></span><a  class="fa fa-whatsapp" style="font-size:36px" style="text-decoration: none;" target=_blank  href="https://chat.whatsapp.com/DwoC350TIhV2Y3aJIISn4r"></a>	</ul>
-					
-				</div>
+					<li><a  class="fa fa-facebook" style="font-size:36px" style="text-decoration: none;"  target=_blank rel=”noopener”  rel=”noreferrer” href="https://www.facebook.com/TEDxChennai/"></a>  
+						<span style="display:inline-block; width: 10px;"></span><a  class="fa fa-instagram" style="font-size:36px" style="text-decoration: none;" target=_blank  href="https://www.instagram.com/tedxchennai/?hl=en"></a>
+						<span style="display:inline-block; width: 10px;"></span><a  class="fa fa-twitter" style="font-size:36px" style="text-decoration: none;" target=_blank  href="https://twitter.com/TEDxChennai"></a>
+						<span style="display:inline-block; width: 10px;"></span><a  class="fa fa-whatsapp" style="font-size:36px" style="text-decoration: none;" target=_blank  href="https://chat.whatsapp.com/DwoC350TIhV2Y3aJIISn4r"></a>	</ul>
+			
+		</div>
 	</div>
+	
+	
+
+	
 </footer>
+<div class="row">
+	<div class="col-md-12 text-center">
+
+	  <p>
+
+Copyright &copy; <script>document.write(new Date().getFullYear());</script> | All rights reserved </p> <p>Poped <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by The Popcorn <a href="https://thepopcorn.tech" target="_blank"></a>
+	  </p>
+	</div>
+</div>
+
 
 
     <!-- PhotoSwipe -->
