--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ theme_color="#e62b1e">
 	<div class="pricing-grid swiper-container">
 		<div class="swiper-wrapper">
 			<!-- Item -->
-			<div class="swiper-slide pricing-grid__item pricing-grid__item_one" style="background-image: url(images/tickets.jpeg)">
+			<div class="swiper-slide pricing-grid__item pricing-grid__item_one" style="background-image: url(images/Patrons.png)">
 				<h4 class="title__h4">Patrons</h4>
 				<div class="pricing-options">
 					<div class="pricing-options__name">We love patrons! Be the closest ones to the ideas with exclusive access to the speakers</div>
@@ -405,7 +405,7 @@ theme_color="#e62b1e">
 			<!-- /Item -->
 		
 			<!-- Item -->
-			<div class="swiper-slide pricing-grid__item pricing-grid__item_two" style="background-image: url(images/tickets.jpeg)">
+			<div class="swiper-slide pricing-grid__item pricing-grid__item_two" style="background-image: url(images/Corporates.png)">
 				<h4 class="title__h4">Corporates</h4>
 				<div class="pricing-options">
 					<div class="pricing-options__name">Meet changemakers and make lasting connections.</div>
@@ -437,7 +437,7 @@ theme_color="#e62b1e">
 			<!-- /Item -->
 		
 			<!-- Item -->
-			<div class="swiper-slide pricing-grid__item pricing-grid__item_three" style="background-image: url(images/tickets.jpeg)">
+			<div class="swiper-slide pricing-grid__item pricing-grid__item_three" style="background-image: url(images/gold.png)">
 				<h4 class="title__h4">Gold</h4>
 				<div class="pricing-options">
 					<div class="pricing-options__name">Get your Willy Wonka's and get closer to the stage.</div>
@@ -472,7 +472,7 @@ theme_color="#e62b1e">
 			<!-- /Item -->
 
 			<!-- Item -->			
-			<div class="swiper-slide pricing-grid__item pricing-grid__item_four" style="background-image: url(images/tickets.jpeg)">
+			<div class="swiper-slide pricing-grid__item pricing-grid__item_four" style="background-image: url(images/silver.png)">
 			   <h4 class="title__h4">Silver</h4>
 				<div class="pricing-options">
 					<div class="pricing-options__name">Be your own knight in shining armor.</div>
@@ -506,7 +506,7 @@ theme_color="#e62b1e">
 
 			<!-- /Item -->
 			<!--/Item-->
-			  <div class="swiper-slide pricing-grid__item pricing-grid__item_five" style="background-image: url(images/tickets.jpeg)">
+			  <div class="swiper-slide pricing-grid__item pricing-grid__item_five" style="background-image: url(images/student.png)">
 			   <h4 class="title__h4">Student</h4>
 				<div class="pricing-options">
 					<div class="pricing-options__name">The secret in education lies in respecting the students. We have special offers for you.</div>
